添加锁定/解锁功能，修改接地图元

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_2030495_pwo1zu1ka1.css">
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_1331132_5lvbai88wkb.css">
+    <!-- 自定义iconfont -->
     <link rel="stylesheet" href="https://at.alicdn.com/t/font_444910_5x8cv55o6el.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
